# gpu-filtering

./: .gitignore  CMakeLists.txt
includes/: block_filter.cuh  thread_filter.cuh
src/: block_filter.cu  config.h  kmp.cuh  main.cu  thread_filter.cu  utils.cuh
